--- a/danny.less
+++ b/danny.less
@@ -730,4 +730,7 @@ monospace;
 @import "https://raw.githubusercontent.com/twbs/bootstrap/v3.3.4/less/responsive-utilities.less";
 @import "https://raw.githubusercontent.com/Pingendo/pingendo-bootstrap/gh-pages/less/pingendo-custom.less";
 
-/* PINGENDO COMMENT DO NOT REMOVE */
+/* PINGENDO COMMENT DO NOT REMOVE */.row {
+background : https://cdn.pixabay.com/photo/2016/03/27/18/54/technology-1283624_960_720.jpg;
+}.g {
+}
