--- a/danny.less
+++ b/danny.less
@@ -14,6 +14,15 @@
  * }
 */
 
+#title{
+  font-size: 65px
+}
+
+p,ul,li,i,b{
+  font-size: 22px
+}
+
+
 //
 // Variables
 // --------------------------------------------------
@@ -26,7 +35,7 @@
 @gray : lighten(@gray-base, 33.5%); // #555
 @gray-light : lighten(@gray-base, 46.7%); // #777
 @gray-lighter : lighten(@gray-base, 93.5%); // #eee
-@brand-primary : #f45942;
+@brand-primary : #337CBB;
 @brand-success : #5cb85c;
 @brand-info : #5bc0de;
 @brand-warning : #f0ad4e;
@@ -76,7 +85,7 @@ monospace;
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 @line-height-computed : floor((@font-size-base * @line-height-base)); // ~20px
 //** By default, this inherits from the `<body>`.
-@headings-font-family : "Droid Sans";
+@headings-font-family : "Roboto";
 @headings-font-weight : 500;
 @headings-line-height : 1.1;
 @headings-color : inherit;
@@ -730,7 +739,13 @@ monospace;
 @import "https://raw.githubusercontent.com/twbs/bootstrap/v3.3.4/less/responsive-utilities.less";
 @import "https://raw.githubusercontent.com/Pingendo/pingendo-bootstrap/gh-pages/less/pingendo-custom.less";
 
-/* PINGENDO COMMENT DO NOT REMOVE */.row {
-background : https://cdn.pixabay.com/photo/2016/03/27/18/54/technology-1283624_960_720.jpg;
-}.g {
+/* PINGENDO COMMENT DO NOT REMOVE */
+
+.scum {
+  padding: 85;
+  background: #333;
+  color: white;
+  p{
+    font-size: 25px
+  }
 }
